added fortify scan